# pyniplay

./: _TODO.md  pyproject.toml
.github/workflows/: _Old_pypiExport.yml
src/pyniplay/: __about__.py  cli.py  niplayThread.py
src/tests/: testNiplayThreadKill.py
